# velox-db

./: .gitignore  CMakeLists.txt  INTERVIEW_PREP.md  README.md  pyproject.toml
.github/: copilot-instructions.md
bindings/: python_bindings.cpp
data/: index.ivf  vectors.fvecs
include/: hnsw_index.hpp  index_base.hpp  ivf_index.hpp  metrics.hpp  storage.hpp  vector_db.hpp
server/: app.py  embedder.py  fvecs_io.py  main.py  metadata.py  schemas.py  state.py
src/: hnsw_index.cpp  index.cpp  ivf_index.cpp  metrics.cpp  storage.cpp
tests/: benchmark_avx2.py  test_script_2.py  test_script_3.py  test_script_5.py
tests/api/: test_hnsw.py  test_script.py  test_script4.py  test_script_2.py  test_script_5.py
tests/cpp/: test_core.cpp
web/: package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/data/: page.tsx
web/app/index/: page.tsx
web/app/ingest/: page.tsx
web/app/search/: page.tsx
web/app/settings/: page.tsx
web/components/: ErrorMessage.tsx  Nav.tsx  StatusBadge.tsx
